# shyqui-music

./: index.html  package-lock.json  package.json
src/: App.css  App.jsx  DesktopApp.jsx  WebApp.jsx  WebPlayer.jsx  api.js  tauri.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  server.rs  state.rs
src/components/: ChannelAvatar.jsx  ChannelCard.jsx  DebugPanel.jsx  EmptyState.jsx  Header.jsx  NavTabs.jsx  Player.jsx  PlaylistCard.jsx  SaveDropdown.jsx  SearchBox.jsx  SettingsPanel.jsx  TrackRow.jsx  VolumeSlider.jsx
src/hooks/: useLocalStorage.js
src/utils/: helpers.js
src/views/: DownloadsView.jsx  HistoryView.jsx  PlaylistsView.jsx  QueueView.jsx  SearchView.jsx
