[package]
name = "shyqui-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shyqui_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
igd-next = "0.17"
qrcode = "0.14"
image = "0.25"
local-ip-address = "0.6"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
